Added a lot of elements for pages

--- a/servers.html
+++ b/servers.html
@@ -78,7 +78,48 @@
       <section class="page-header">
         <h2>Servers</h2>
       </section>
-      <section class="page-content"></section>
+      <section class="page-content">
+        <div class="filter">
+          <img src="icons/sortBy.svg" />
+          <img src="icons/add.svg" />
+        </div>
+        <div class="list-element">
+          <div class="element-picture">
+            <img src="icons/account-offline.svg" />
+          </div>
+          <div class="element-name">
+            <h1>Server Name</h1>
+          </div>
+          <div class="element-notif"></div>
+          <div class="element-options">
+            <img src="icons/options.svg" />
+          </div>
+        </div>
+        <div class="list-element">
+          <div class="element-picture">
+            <img src="icons/account-offline.svg" />
+          </div>
+          <div class="element-name">
+            <h1>Server Name</h1>
+          </div>
+          <div class="element-notif"></div>
+          <div class="element-options">
+            <img src="icons/options.svg" />
+          </div>
+        </div>
+        <div class="list-element">
+          <div class="element-picture">
+            <img src="icons/account-offline.svg" />
+          </div>
+          <div class="element-name">
+            <h1>Server Name</h1>
+          </div>
+          <div class="element-notif"></div>
+          <div class="element-options">
+            <img src="icons/options.svg" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
