--- a/settings.html
+++ b/settings.html
@@ -78,7 +78,24 @@
       <section class="page-header">
         <h2>Settings</h2>
       </section>
-      <section class="page-content"></section>
+      <section class="page-content">
+        <div class="hardware-settings">
+          <div>
+            <h2>Hardware</h2>
+          </div>
+          <div>
+            <p>Audio input</p>
+            <label for="input-select">Choose an input qudio device:</label>
+            <select name="input" id="input-select">
+              <option value="">--Please choose an option--</option>
+              <option value="razer kraken x">Razer kraken x</option>
+            </select>
+          </div>
+          <div>
+            <p>Audio output</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
