Added media querries

--- a/friends.html
+++ b/friends.html
@@ -35,40 +35,40 @@
         <a href="myProfile.html"
           ><div>
             <img src="icons/profile.svg" alt="my profile" />
-            <h3>My profile</h3>
+            <h3 class="label">My profile</h3>
           </div>
         </a>
         <a href="mainPage.html"
           ><div>
             <img src="icons/news.svg" alt="news page" />
-            <h3>News page</h3>
+            <h3 class="label">News page</h3>
           </div></a
         >
         <a href="chats.html"
           ><div>
             <img src="icons/chat.svg" alt="chats" />
-            <h3>Chats</h3>
+            <h3 class="label">Chats</h3>
           </div></a
         >
 
         <a href="friends.html"
           ><div>
             <img src="icons/friends.svg" />
-            <h3>Friends</h3>
+            <h3 class="label">Friends</h3>
           </div></a
         >
 
         <a href="servers.html"
           ><div>
             <img src="icons/servers.svg" />
-            <h3>Servers</h3>
+            <h3 class="label">Servers</h3>
           </div></a
         >
 
         <a href="settings.html"
           ><div>
             <img src="icons/settings.svg" />
-            <h3>Settings</h3>
+            <h3 class="label">Settings</h3>
           </div></a
         >
       </nav>
