--- a/myProfile.html
+++ b/myProfile.html
@@ -100,8 +100,7 @@
             <h1>User Name</h1>
             <h3>@username</h3>
             <p class="bio">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Velit
-              consequat inceptos suscipit pulvinar finibus vehicula magna.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
           </div>
           <div class="profile-menu">
