Little changes with structure

--- a/chats.html
+++ b/chats.html
@@ -18,9 +18,24 @@
       <div class="logo">
         <img class="logoIcon" src="icons/site logo.svg" alt="site logo" />
       </div>
-      <div class="search">
-        <input class="searchBar" type="text" placeholder="Rechercher..." />
-        <img class="searchIcon" src="icons/search.svg" alt="search icon" />
+      <div class="searchbar1">
+        <div class="input-group mb-3 border">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Looking for something?"
+            aria-label="serach"
+            aria-describedby="basic-addon2"
+          />
+          <div class="input-group-append">
+            <button
+              class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
+              type="button"
+            >
+              <img src="icons/search.svg" style="height: 5%" />
+            </button>
+          </div>
+        </div>
       </div>
       <div class="rightIcons">
         <img
