--- a/settings.html
+++ b/settings.html
@@ -32,7 +32,7 @@
               class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
               type="button"
             >
-              <img src="icons/search.svg" style="height: 45px" />
+              <img src="icons/search.svg" style="height: 5%" />
             </button>
           </div>
         </div>
