--- a/friends.html
+++ b/friends.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="style-bootstrap.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,9 +18,24 @@
       <div class="logo">
         <img class="logoIcon" src="icons/site logo.svg" alt="site logo" />
       </div>
-      <div class="search">
-        <input class="searchBar" type="text" placeholder="Rechercher..." />
-        <img class="searchIcon" src="icons/search.svg" alt="search icon" />
+      <div class="searchbar1">
+        <div class="input-group mb-3 border">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Looking for something?"
+            aria-label="serach"
+            aria-describedby="basic-addon2"
+          />
+          <div class="input-group-append">
+            <button
+              class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
+              type="button"
+            >
+              <img src="icons/search.svg" style="height: 5%" />
+            </button>
+          </div>
+        </div>
       </div>
       <div class="rightIcons">
         <img
