--- a/messages.html
+++ b/messages.html
@@ -90,52 +90,95 @@
       </nav>
     </section>
     <section class="rightBar"></section>
+    
     <main>
       <section class="page-header">
-        <h2>Servers</h2>
+        <h2>Chat/User Name</h2>
       </section>
-      <section class="page-content">
-        <div class="filter">
-          <img src="icons/sortBy.svg" />
-          <img src="icons/add.svg" />
+      <section class="page-content"
+      style="margin-bottom: 4vh;">
+        <div class="list-element">
+            <div class="element-picture">
+              <img src="icons/account-offline.svg" />
+            </div>
+            <div class="message">
+                <div class="element-name">
+                    <h1>Name</h1>
+                  </div>
+                  <div class="message-text">
+                  </div>
+            </div>
+          </div>
+          <div class="list-element">
+            <div class="element-picture">
+              <img src="icons/account-offline.svg" />
+            </div>
+            <div class="element-name">
+              <h1>Name</h1>
+            </div>
+          </div>
+          <div class="list-element">
+            <div class="element-picture">
+              <img src="icons/account-offline.svg" />
+            </div>
+            <div class="element-name">
+              <h1>Name</h1>
+            </div>
         </div>
         <div class="list-element">
-          <div class="element-picture">
-            <img src="icons/account-offline.svg" />
-          </div>
-          <div class="element-name">
-            <h1>Server Name</h1>
-          </div>
-          <div class="element-notif"></div>
-          <div class="element-options">
-            <img src="icons/options.svg" />
-          </div>
+            <div class="element-picture">
+              <img src="icons/account-offline.svg" />
+            </div>
+            <div class="element-name">
+              <h1>Name</h1>
+            </div>
         </div>
         <div class="list-element">
-          <div class="element-picture">
-            <img src="icons/account-offline.svg" />
-          </div>
-          <div class="element-name">
-            <h1>Server Name</h1>
-          </div>
-          <div class="element-notif"></div>
-          <div class="element-options">
-            <img src="icons/options.svg" />
-          </div>
-        </div>
-        <div class="list-element">
-          <div class="element-picture">
-            <img src="icons/account-offline.svg" />
-          </div>
-          <div class="element-name">
-            <h1>Server Name</h1>
-          </div>
-          <div class="element-notif"></div>
-          <div class="element-options">
-            <img src="icons/options.svg" />
-          </div>
-        </div>
+            <div class="element-picture">
+              <img src="icons/account-offline.svg" />
+            </div>
+            <div class="element-name">
+              <h1>Name</h1>
+            </div>
+            
+        <section class="input-message">
+            <div class="searchbar1">
+                <div class="input-group mb-3 border">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Write your message here"
+                    aria-label="serach"
+                    aria-describedby="basic-addon2"
+                  />
+                  <div class="input-group-append">
+                    <button
+                      class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
+                      type="button"
+                    >
+                      <img src="icons/clip.svg" style="height: 4vh" />
+                    </button>
+                    <button
+                      class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
+                      type="button"
+                    >
+                      <img src="icons/send-blue.svg" style="height: 4vh" />
+                    </button>
+                  </div>
+                </div>
+              </div>
+        </section>
       </section>
     </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
