--- a/messages.html
+++ b/messages.html
@@ -97,51 +97,79 @@
       </section>
       <section class="page-content"
       style="margin-bottom: 4vh;">
-        <div class="list-element">
-            <div class="element-picture">
-              <img src="icons/account-offline.svg" />
-            </div>
-            <div class="message">
-                <div class="element-name">
-                    <h1>Name</h1>
-                  </div>
-                  <div class="message-text">
-                  </div>
-            </div>
-          </div>
-          <div class="list-element">
-            <div class="element-picture">
-              <img src="icons/account-offline.svg" />
-            </div>
-            <div class="element-name">
-              <h1>Name</h1>
-            </div>
-          </div>
-          <div class="list-element">
-            <div class="element-picture">
-              <img src="icons/account-offline.svg" />
-            </div>
-            <div class="element-name">
-              <h1>Name</h1>
-            </div>
+      <div class="message">
+        <div class="message-image" id="message-image">
+          <img src="icons/account-online.svg">
         </div>
-        <div class="list-element">
-            <div class="element-picture">
-              <img src="icons/account-offline.svg" />
-            </div>
-            <div class="element-name">
-              <h1>Name</h1>
-            </div>
+        <div class="message-content">
+          <div class="message-name">
+            <h3>
+              User Name
+            </h3>
+          </div>
+          <div class="message-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed lobortis libero. In rhoncus venenatis auctor.In rhoncus venenatis auctor.
+          </div>
         </div>
-        <div class="list-element">
-            <div class="element-picture">
-              <img src="icons/account-offline.svg" />
-            </div>
-            <div class="element-name">
-              <h1>Name</h1>
-            </div>
-            
-        <section class="input-message">
+        <div class="message-age">
+          11 min
+        </div>
+      </div>
+      <div class="message">
+        <div class="message-image" id="message-image">
+          <img src="icons/account-online.svg">
+        </div>
+        <div class="message-content">
+          <div class="message-name">
+            <h3>
+              You
+            </h3>
+          </div>
+          <div class="message-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed lobortis libero. In rhoncus venenatis auctor.In rhoncus venenatis auctor.
+          </div>
+        </div>
+        <div class="message-age">
+          10 min
+        </div>
+      </div>
+      <div class="message">
+        <div class="message-image" id="message-image">
+          <img src="icons/account-online.svg">
+        </div>
+        <div class="message-content">
+          <div class="message-name">
+            <h3>
+              User Name
+            </h3>
+          </div>
+          <div class="message-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed lobortis libero. In rhoncus venenatis auctor.In rhoncus venenatis auctor.
+          </div>
+        </div>
+        <div class="message-age">
+          9 min
+        </div>
+      </div>
+      <div class="message">
+        <div class="message-image" id="message-image">
+          <img src="icons/account-online.svg">
+        </div>
+        <div class="message-content">
+          <div class="message-name">
+            <h3>
+              You
+            </h3>
+          </div>
+          <div class="message-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed lobortis libero. In rhoncus venenatis auctor.In rhoncus venenatis auctor.
+          </div>
+        </div>
+        <div class="message-age">
+          8 min
+        </div>
+      </div>
+      <section class="input-message">
             <div class="searchbar1">
                 <div class="input-group mb-3 border">
                   <input
