Little rework with html code. Added scripts to create new posts and sending messages

--- a/chats.html
+++ b/chats.html
@@ -104,7 +104,9 @@
             <img src="icons/account-offline.svg" />
           </div>
           <div class="element-name">
-            <h1>User Name</h1>
+            <a href="messages.html">
+              <h1>User Name</h1>
+            </a>
           </div>
           <div></div>
           <div class="element-options">
