--- a/connection-page.html
+++ b/connection-page.html
@@ -39,7 +39,9 @@
                     <label for="do-not-logout">Do not logout </label>
                     <input type="checkbox">
                 </div>
-                <button class="btn btn-primary btn-lg">Spawn!</button>
+                <a href="mainPage.html">
+                  <button class="btn btn-primary btn-lg" >Spawn!</button>
+                </a>
                 <div class="links">
                     <a href="registration.html">Don't have an account?</a>
                     <a href="#">Forgot your password?</a>
