--- a/messages.html
+++ b/messages.html
@@ -95,26 +95,8 @@
       <section class="page-header">
         <h2>Chat/User Name</h2>
       </section>
-      <section class="page-content"
+      <section class="page-content" id="messages-chat"
       style="margin-bottom: 4vh;">
-      <div class="message">
-        <div class="message-image" id="message-image">
-          <img src="icons/account-online.svg">
-        </div>
-        <div class="message-content">
-          <div class="message-name">
-            <h3>
-              User Name
-            </h3>
-          </div>
-          <div class="message-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed lobortis libero. In rhoncus venenatis auctor.In rhoncus venenatis auctor.
-          </div>
-        </div>
-        <div class="message-age">
-          11 min
-        </div>
-      </div>
       <div class="message">
         <div class="message-image" id="message-image">
           <img src="icons/account-online.svg">
@@ -169,6 +151,7 @@
           8 min
         </div>
       </div>
+    </section>
       <section class="input-message">
             <div class="searchbar1">
                 <div class="input-group mb-3 border">
@@ -178,6 +161,7 @@
                     placeholder="Write your message here"
                     aria-label="serach"
                     aria-describedby="basic-addon2"
+                    id="input-message"
                   />
                   <div class="input-group-append">
                     <button
@@ -189,6 +173,7 @@
                     <button
                       class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
                       type="button"
+                      id="button-send-message"
                     >
                       <img src="icons/send-blue.svg" style="height: 4vh" />
                     </button>
@@ -196,17 +181,11 @@
                 </div>
               </div>
         </section>
-      </section>
     </main>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
+    <script src="js/messageScript.js"></script>
   </body>
 </html>
+
+<!--
+
+-->
