--- a/connection-page.html
+++ b/connection-page.html
@@ -27,7 +27,8 @@
         <section class="page-content">
             <div class="connection">
                 <h1>Ready to respawn?</h1>
-                <div class="connection-input">
+                <form>
+                  <div class="connection-input">
                     <label for="username">Username</label>
                     <input type="text" required>
                 </div>
@@ -44,6 +45,7 @@
                     <a href="registration.html">Don't have an account?</a>
                     <a href="#">Forgot your password?</a>
                 </div>
+                </form>
             </div>
         </section>
     </main>
