--- a/registration.html
+++ b/registration.html
@@ -27,7 +27,8 @@
         <section class="page-content">
             <div class="connection">
                 <h1>Registration</h1>
-                <div class="connection-input">
+                <form>
+                  <div class="connection-input">
                     <label for="username">Username</label>
                     <input type="text" required>
                 </div>
@@ -47,7 +48,8 @@
                     <label for="do-not-logout">I don't want receive the promotions</label>
                     <input type="checkbox">
                 </div>
-                <button class="btn btn-secondary btn-lg">LET ME IN!</button>
+                <button class="btn btn-secondary btn-lg" type="submit">LET ME IN!</button>
+                </form>
                 <div class="links">
                     <a href="connection-page.html">Already have an account?</a>
                 </div>
