--- a/chats.html
+++ b/chats.html
@@ -99,45 +99,10 @@
           <img src="icons/sortBy.svg" />
           <img src="icons/add.svg" />
         </div>
-        <div class="list-element">
-          <div class="element-picture">
-            <img src="icons/account-offline.svg" />
-          </div>
-          <div class="element-name">
-            <a href="messages.html">
-              <h1>User Name</h1>
-            </a>
-          </div>
-          <div></div>
-          <div class="element-options">
-            <img src="icons/options.svg" />
-          </div>
-        </div>
-        <div class="list-element">
-          <div class="element-picture">
-            <img src="icons/account-offline.svg" />
-          </div>
-          <div class="element-name">
-            <h1>Group Name</h1>
-          </div>
-          <div class="element-notif"></div>
-          <div class="element-options">
-            <img src="icons/options.svg" />
-          </div>
-        </div>
-        <div class="list-element">
-          <div class="element-picture">
-            <img src="icons/account-offline.svg" />
-          </div>
-          <div class="element-name">
-            <h1>User Name</h1>
-          </div>
-          <div class="element-notif"></div>
-          <div class="element-options">
-            <img src="icons/options.svg" />
-          </div>
+        <div class="list" id="chats-list">
         </div>
       </section>
     </main>
+    <script src="js/chats.js"></script>
   </body>
 </html>
