rework with messages/chat

--- a/mainPage.html
+++ b/mainPage.html
@@ -98,18 +98,16 @@
         <div class="new-post">
           <input placeholder="Something new?" type="text" id="new-post-input"/>
           <button
-                          class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
-                          type="button"
-                        >
-                          <img src="icons/clip.svg" style="height: 3vh" />
-                        </button>
+            class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
+            type="button">
+              <img src="icons/clip.svg" style="height: 3vh" />
+          </button>
           <button
-                      class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
-                      type="button"
-                      id="create-post-button"
-                    >
-                      <img src="icons/send-blue.svg" style="height: 3vh" />
-                    </button>
+            class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
+            type="button"
+            id="create-post-button">
+              <img src="icons/send-blue.svg" style="height: 3vh" />
+          </button>
         </div> 
         <div class="page-posts" id="page-posts">
           <!-- 
