--- a/messages.html
+++ b/messages.html
@@ -92,8 +92,7 @@
     <section class="rightBar"></section>
     
     <main>
-      <section class="page-header">
-        <h2>Chat/User Name</h2>
+      <section class="page-header" id="chat-name">
       </section>
       <section class="page-content" id="messages-chat"
       style="margin-bottom: 4vh;">
