Added posibility to create posts with images. User friends loads by call api. not hardcoded from now

--- a/chats.html
+++ b/chats.html
@@ -96,11 +96,16 @@
       </section>
       <section class="page-content">
         <div class="filter">
-          <img src="icons/sortBy.svg" />
+          <button
+            class="btn btn-outline-secondary btn-sm d-flex align-items-center border"
+            type="button"
+            id="button-send-message"
+          >
+            <img src="icons/sortBy.svg" />
+          </button>
           <img src="icons/add.svg" />
         </div>
-        <div class="list" id="chats-list">
-        </div>
+        <div class="list" id="chats-list"></div>
       </section>
     </main>
     <script src="js/chats.js"></script>
