--- a/messages.html
+++ b/messages.html
@@ -93,11 +93,7 @@
 
     <main>
       <section class="page-header" id="chat-name"></section>
-      <section
-        class="page-content"
-        id="messages-chat"
-        style="margin-bottom: 4vh"
-      >
+      <section class="page-content" id="messages-chat">
         <div class="message">
           <div class="message-info">
             <div class="message-sender">
@@ -126,7 +122,7 @@
                 <img src="icons/account-online.svg" />
               </div>
               <div class="message-name">
-                <h3>You</h3>
+                <h3>user name</h3>
               </div>
             </div>
             <div class="message-age">9 min</div>
@@ -163,7 +159,7 @@
         </div>
       </section>
       <section class="input-message">
-        <div class="system-output" id="system-output"></div>
+        <div id="system-output"></div>
         <div class="searchbar1">
           <div class="input-group mb-3 border">
             <input
@@ -173,6 +169,7 @@
               aria-label="serach"
               aria-describedby="basic-addon2"
               id="input-message"
+              autocomplete="off"
             />
             <div class="input-group-append">
               <button
@@ -197,6 +194,11 @@
       </section>
     </main>
     <script src="js/messageScript.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
 
