--- a/connection-page.html
+++ b/connection-page.html
@@ -30,26 +30,35 @@
                 <form>
                   <div class="connection-input">
                     <label for="username">Username</label>
-                    <input type="text" required>
+                    <input type="text" required id="username_input" autocomplete="off">
                 </div>
                 <div class="connection-input">
                     <label for="password">Password</label>
-                    <input type="password" required>
+                    <input type="password" required id="password_input">
                 </div>
                 <div class="checkbox">
                     <label for="do-not-logout">Do not logout </label>
                     <input type="checkbox">
                 </div>
                 <a href="mainPage.html">
-                  <button class="btn btn-primary btn-lg" >Spawn!</button>
+                  <button class="btn btn-primary btn-lg" id="login_button">Spawn!</button>
                 </a>
-                <div class="links">
-                    <a href="registration.html">Don't have an account?</a>
-                    <a href="#">Forgot your password?</a>
+                <div class="additional">
+                    <div id="system-output"></div>
+                    <div class="links">
+                      <a href="registration.html">Don't have an account?</a>
+                      <a href="#">Forgot your password?</a>
+                    </div>
                 </div>
                 </form>
             </div>
         </section>
     </main>
+    <script src="js/connection.js"></script>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
