--- a/registration.html
+++ b/registration.html
@@ -30,31 +30,44 @@
                 <form>
                   <div class="connection-input">
                     <label for="username">Username</label>
-                    <input type="text" required>
+                    <input type="text" id="username-input" autocomplete="off">
                 </div>
                 <div class="connection-input">
-                    <label for="password">Password</label>
-                    <input type="password" required>
+                    <label for="password">Password <div id="safety-indicator" style = "border-radius: 50%; background-color: red; width: 10px; height: 10px;"></div></label>
+                    <input type="password" id="password-input">
+                    <div id="password-error"></div>
                 </div>
+                <div class="connection-input">
+                  <label for="password">Repeat password <div id="same-indicator" style = "border-radius: 50%; background-color: red; width: 10px; height: 10px;"></div></label>
+                  <input type="password" id="repeat-password">
+                  <div id="password-error"></div>
+              </div>
                 <div class="connection-input">
                     <label for="password">Profile Name</label>
-                    <input type="text" required>
+                    <input type="text" id="profilename-input">
                 </div>
                 <div class="connection-input">
                     <label for="password">Email adress</label>
-                    <input type="email" required>
+                    <input type="email" id="email-input">
                 </div>
                 <div class="checkbox">
                     <label for="do-not-logout">I don't want receive the promotions</label>
                     <input type="checkbox">
                 </div>
-                <button class="btn btn-secondary btn-lg" type="submit">LET ME IN!</button>
+                <button class="btn btn-secondary btn-lg" type="submit" id="submit-button">LET ME IN!</button>
                 </form>
+                <div id="system-output"></div>
                 <div class="links">
                     <a href="connection-page.html">Already have an account?</a>
                 </div>
             </div>
         </section>
     </main>
+    <script src="js/registration.js"></script>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
