--- a/registration.html
+++ b/registration.html
@@ -33,7 +33,7 @@
                     <input type="text" id="username-input" autocomplete="off">
                 </div>
                 <div class="connection-input">
-                    <label for="password">Password <div id="safety-indicator" style = "border-radius: 50%; background-color: red; width: 10px; height: 10px;"></div></label>
+                    <label for="password">Password <div id="safety-indicator" class="weak-password"></div></label>
                     <input type="password" id="password-input">
                     <div id="password-error"></div>
                 </div>
